--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,24 @@
-node_modules
+node_modules/
+dist/
+coverage/
+.turbo/
+.cache/
+
+# Build/runtime artifacts
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
 # Keep environment variables out of version control
 .env
+.env.*
+!.env.example
 
-/generated/prisma
+# Prisma generated artifacts
+generated/prisma/
+
+# OS/editor local artifacts
+.DS_Store
+Thumbs.db
