--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
