--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.7",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "jszip": "^3.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.5"
